--- a/index.html
+++ b/index.html
@@ -1,9 +1,78 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Raspberry Pi Live Video Feed</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Monitoring Kebakaran</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+      }
+      .navbar {
+        background-color: #dc3545;
+        color: white;
+      }
+      .navbar-brand {
+        font-size: 1.5rem;
+      }
+      .container {
+        margin-top: 20px;
+      }
+      .card {
+        margin-bottom: 15px;
+      }
+      .status {
+        font-size: 1.2rem;
+        font-weight: bold;
+      }
+      table {
+        width: 100%;
+        margin-top: 20px;
+        border-collapse: collapse;
+      }
+      table, th, td {
+        border: 1px solid #ddd;
+        padding: 8px;
+      }
+      th {
+        background-color: #f2f2f2;
+        text-align: center;
+      }
+      td {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
-    <h1>Raspberry Pi Live Video Feed</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Monitoring Kebakaran</a>
+      </div>
+    </nav>
+
+    <div class="container">
+      <h1 class="text-center mt-4">Live Monitoring Data</h1>
+
+      <div id="dataContainer" class="row">
+        <table id="dataTable">
+          <thead>
+            <tr>
+              <th>Sensor</th>
+              <th>Nilai</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Data akan dimuat di sini oleh JavaScript -->
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
