--- a/index.html
+++ b/index.html
@@ -74,5 +74,26 @@
     </div>
 
     <script src="script.js"></script>
+
+    <h2 class="text-center mt-4">Riwayat Data</h2>
+    <div id="historyContainer" class="row">
+      <table id="historyTable">
+        <thead>
+          <tr>
+            <th>Temperature</th>
+            <th>Humidity</th>
+            <th>Gas Detected</th>
+            <th>Flame Detected</th>
+            <th>Timestamp</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Riwayat data akan dimuat di sini oleh JavaScript -->
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+    <script src="script2.js"></script>
   </body>
 </html>
